[gd_scene load_steps=6 format=3 uid="uid://dow1gob53q0wu"]

[ext_resource type="FontFile" uid="uid://cxe54i0grmnx1" path="res://assets/fonts/Audiowide-Regular.ttf" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://jsxkn41s1tq7" path="res://scenes/ui/ui.gd" id="1_x4jx1"]
[ext_resource type="FontFile" uid="uid://crqpose2lt1md" path="res://assets/fonts/Geo-Regular.ttf" id="3_g5kmx"]
[ext_resource type="FontFile" uid="uid://xxo58ebnox6h" path="res://assets/fonts/Geo-Italic.ttf" id="3_yev5y"]
[ext_resource type="FontFile" uid="uid://dfesqxi8dlqfw" path="res://assets/fonts/VT323-Regular.ttf" id="5_0dwhk"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x4jx1")

[node name="RedText" type="RichTextLabel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.215625
anchor_top = 0.44375
anchor_right = 0.834375
anchor_bottom = 0.510416
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_nt7q6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[font_size=20][shake rate=40.0 level=5 connected=1][color=#FF0000]Network Packet Lost[/color][/shake]"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score" type="RichTextLabel" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39375
anchor_top = 0.0354167
anchor_right = 1.0125
anchor_bottom = 0.131251
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_nt7q6")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[tornado radius=3.0 freq=4.0 connected=1][color=#FF00FF]Score: 0[/color][/tornado]"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score2" type="RichTextLabel" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396874
anchor_top = 0.0395837
anchor_right = 1.01562
anchor_bottom = 0.127084
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_nt7q6")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[tornado radius=3.0 freq=4.0 connected=1][color=#00FFFF]Score: 0[/color][/tornado]"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Hint" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2125
anchor_top = 0.764583
anchor_right = 0.83125
anchor_bottom = 0.889583
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_yev5y")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[color=#00FFFF]Press corresponding buttons
or click on packets[/color]"
horizontal_alignment = 1

[node name="BigText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = 156.0
offset_right = -8.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_g5kmx")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[tornado radius=1.0 freq=1.0 connected=1][color=#00FFFF]Throw packets to remote node[/color][/tornado]"
horizontal_alignment = 1

[node name="BigText2" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 158.0
offset_right = -6.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_g5kmx")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[tornado radius=1.0 freq=1.0 connected=1][color=#FF00FF]Throw packets to remote node[/color][/tornado]"
horizontal_alignment = 1

[node name="TTS" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 275.0
offset_right = -2.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("5_0dwhk")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[tornado radius=1.0 freq=1.0 connected=1][color=#00FFFF]TTS (time to stay)
[/color][/tornado]"
horizontal_alignment = 1

[connection signal="packet_sent" from="." to="." method="_on_packet_sent"]
